Implement tests for the local session manager, add `charted ch-migrations` subcommand, work on LDAP support